/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package code.google.dsf.test.protobuf;

message PbDTO {
  // all the primitive types
  required    int32 itemid    =  1;
  optional    string logid    =  2;
  optional    int32 userid   =  3;
  optional   string imei   =  4;
  optional   string sid   =  5;
  optional   double flowSize   =  6;
  optional  string beginTime  =  7;
  optional  string endTime  =  8;
  optional int32 homecountry =  9;
  optional int32 visitcountry = 10;
}

message PbList {
  repeated PbDTO dto = 1;
}
